# Api-Twitter-Docker-Mongo

./: .README.md.swp  .editorconfig  .gitignore  README.md  bkp.toml  docker-compose.yml  json-to-df.ipynb  main.py  main_teste.py  mongo.py  pipeline-trata-json.hpl  pyproject.toml  setup.cfg
src/: secrets.py  services.py
